--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -194,3 +194,28 @@
   font-size: 16px;
 }
 
+
+/*******************************************************************************/
+/* Topic CSS */
+/*******************************************************************************/
+
+
+.topic-section {
+  border: 2px solid #febe98;
+  border-radius: 8px;
+  padding: 15px;
+  text-align: center;
+  transition: background-color 0.3s;
+  pointer-events: auto;
+  cursor: pointer;
+}
+
+.topic-section-item {
+  font-size: 16px;
+  color: #666;
+  padding: 10px;
+  border-top: 1px solid #ddd;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
