--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -219,3 +219,8 @@
   transition: background-color 0.3s, color 0.3s;
 }
 
+.link-unstyled {
+  text-decoration: none;
+  color: inherit; /* 기본 색상 유지 */
+}
+
