--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -56,6 +56,13 @@
   color: white;
 }
 
+.section-image {
+  width: 100%;  /* 가로 크기 100% */
+  height: 400px;  /* 자동으로 세로 크기 비율 맞추기 */
+  margin-bottom: 20px; /* 이미지 아래에 여백 추가 */
+}
+
+
 /*******************************************************************************/
 /* Button CSS */
 /*******************************************************************************/
