--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -129,5 +129,5 @@
 
 /* 페이지 전체 상단 여백 추가 */
 .content-wrapper {
-  padding-top: 70px; /* 상단 네비게이션 높이와 동일 */
+  padding-top: 0px !important; /* 상단 네비게이션 높이와 동일 */
 }
