--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -201,6 +201,16 @@
   font-size: 16px;
 }
 
+/* 기본 탭 제목 색상 */
+.custom-tab-title {
+  color: #FF6347 !important; /* 기본 색상 */
+}
+
+/* 활성화된 탭 제목 색상 */
+.custom-tab-title.active {
+  color: #313131 !important; /* 활성화된 탭은 다른 색상 */
+}
+
 
 /*******************************************************************************/
 /* Topic CSS */
