--- a/src/App.css
+++ b/src/App.css
@@ -46,4 +46,41 @@
 
 body {
   font-family: 'Ownglyph_ParkDaHyun', sans-serif !important;
+  background-color: #fff;
+}
+
+.container {
+  max-width: 600px !important;
+  margin: 0 auto !important;
+  padding: 0 0px !important;
+  background-color: #fff !important;
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 100%;
+    padding: 0 10px; /* 좌우 여백 축소 */
+  }
+  .top-navigation,
+  .navigation {
+    max-width: 100%; /* 네비게이션도 전체 너비 사용 */
+  }
+}
+
+/* 태블릿 이상 */
+@media (min-width: 1024px) {
+  .container,
+  .top-navigation,
+  .navigation {
+    max-width: 900px;
+  }
+}
+
+/* 데스크탑 이상 */
+@media (min-width: 1440px) {
+  .container,
+  .top-navigation,
+  .navigation {
+    max-width: 1200px;
+  }
 }
