--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -6,6 +6,13 @@
 /* 네비게이션 공통 스타일 */
 /* 하단 네비게이션 고정 */
 .navigation {
+/* 모바일 추가부분 */
+max-width: 600px;
+margin: 0 auto;
+padding: 10px 20px;
+left: 0;
+right: 0;
+/* 모바일 추가부분 */
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -66,6 +73,20 @@
 /*******************************************************************************/
 
 .top-navigation {
+  /* 모바일 추가부분  */
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 10px 20px; 
+  background-color: #febe98;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  /*  모바일 추가부분 */
   display: flex;
   justify-content: space-between;
   align-items: center;
