--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -10,7 +10,7 @@
   justify-content: space-around;
   align-items: center;
   background-color: #febe98;
-  padding: 10px 0;
+  padding: 0;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -22,7 +22,7 @@
 /* 기본 텍스트 스타일 */
 .nav-item {
   font-size: 16px; /* 글씨 크기 */
-  color: #fff; /* 기본 글씨색: 흰색 */
+  color: #f8e1d8; /* 기본 글씨색: 흰색 */
   text-decoration: none; /* 밑줄 제거 */
   cursor: pointer; /* 클릭 가능한 포인터 커서 */
   padding: 8px 12px; /* 여백 추가로 클릭 영역 확장 */
@@ -34,15 +34,15 @@
 .nav-item.active {
   color: #ff7f50; /* 활성화된 항목 글씨색: 산호색 */
   font-weight: bold; /* 활성화된 항목 강조 */
-  background-color: #fff; /* 활성화된 항목 배경색: 흰색 */
-  border: 1px solid #ff7f50; /* 활성화된 항목 테두리 */
+  /* background-color: #fff; 활성화된 항목 배경색: 흰색 */
+  /*border: 1px solid #ff7f50;  활성화된 항목 테두리 */
 }
 
 /* 항목 호버 효과 */
 .nav-item:hover {
   color: #ff7f50; /* 글씨색 변경 */
-  background-color: #fff; /* 배경색 변경 */
-  border: 1px solid #ff7f50; /* 호버 시 테두리 */
+  /* background-color: #fff; 배경색 변경 */
+  /*border: 1px solid #ff7f50;  호버 시 테두리 */
 }
 
 /* 아이콘 스타일 */
