--- a/src/styles/cashbook/SearchExpenses.css
+++ b/src/styles/cashbook/SearchExpenses.css
@@ -1,5 +1,5 @@
 /* 검색 섹션 스타일 */
-.search-expenses {
+.cashbook-search-expenses {
   display: flex; /* Flexbox 레이아웃 활성화 */
   flex-direction: column; /* 자식 요소를 세로로 정렬 */
   align-items: center; /* 자식 요소를 가로 중앙 정렬 */
@@ -7,7 +7,7 @@
 }
 
 /* 날짜 선택기 컨테이너 스타일 */
-.date-picker-container {
+.cashbook-date-picker-container {
   display: flex; /* Flexbox 레이아웃 활성화 */
   flex-wrap: wrap; /* 요소가 화면 너비를 넘어가면 다음 줄로 이동 */
   justify-content: center; /* 자식 요소를 가운데 정렬 */
@@ -21,7 +21,7 @@
 }
 
 /* 드롭다운 컨테이너 스타일 */
-.dropdown-container {
+.cashbook-dropdown-container {
   display: flex; /* Flexbox 레이아웃 활성화 */
   flex-direction: column; /* 자식 요소를 세로로 정렬 */
   gap: 20px; /* 각 요소 간의 간격 15px */
@@ -29,14 +29,14 @@
 }
 
 /* 공통 라벨 스타일 */
-label {
+.cashbook-label {
   font-weight: bold; /* 글씨를 굵게 표시 */
   margin-right: 5px; /* 오른쪽 여백 5px */
 }
 
 /* 드롭다운과 React-datepicker의 입력 필드 스타일 */
-select,
-.react-datepicker__input-container input {
+.cashbook-select,
+.cashbook-react-datepicker__input-container input {
   width: 200px; /* 너비를 200px로 설정 */
   padding: 5px; /* 내부 여백 5px */
   border: 1px solid #ccc; /* 연한 회색 테두리 */
@@ -44,7 +44,7 @@ select,
 }
 
 /* 검색 버튼 스타일 */
-.search-button {
+.cashbook-search-button {
   padding: 10px 20px; /* 세로 10px, 가로 20px 내부 여백 */
   font-size: 16px; /* 글자 크기 16px */
   color: #fff; /* 글자 색상을 흰색으로 설정 */
@@ -55,7 +55,7 @@ select,
 }
 
 /* 검색 결과 섹션 스타일 */
-.search-results {
+.cashbook-search-results {
   margin-top: 20px; /* 위쪽 여백 20px */
   width: 100%; /* 너비를 부모 요소에 맞게 설정 */
   text-align: center; /* 텍스트를 가운데 정렬 */
