--- a/src/styles/community/Comment.css
+++ b/src/styles/community/Comment.css
@@ -1,5 +1,24 @@
 /* Comment.css */
 
+.comment-count {
+  font-weight: bold;
+  color: #333;
+}
+
+.view-comments-button {
+  background: none;
+  color: #007bff;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.view-comments-button:hover {
+  color: #0056b3;
+}
+
+
 .comment-container {
     font-family: Arial, sans-serif;
     font-size: 14px;
@@ -54,3 +73,32 @@
     margin-left: auto;
   }
   
+
+/* 댓글 작성 폼 */
+.comment-post-header {
+  border-radius: 6px 6px 0 0;
+  border: 1px solid #ccc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 10px;
+  background-color: #f5f5f5;
+}
+
+.comment-post-username {
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+}
+
+.comment-post-image-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #555;
+}
+
+.comment-post-content {
+  border-radius: 0 0 6px 6px;
+  font-size: 18px;
+}
