--- a/src/styles/pointshop/GetPointProduct.css
+++ b/src/styles/pointshop/GetPointProduct.css
@@ -70,7 +70,7 @@
 .product-info-box {
   margin-top: 30px;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #EDEDED;
   border-radius: 10px;
   text-align: left;
   font-size: 0.9rem;
