--- a/src/styles/cashbook/ExpenseButtons.css
+++ b/src/styles/cashbook/ExpenseButtons.css
@@ -1,12 +1,15 @@
 .expense-buttons {
   display: flex; /* Flexbox를 활성화하여 버튼들을 가로로 배치 */
   justify-content: center; /* 버튼들을 가로 중앙 정렬 */
-  gap: 80px; /* 버튼 간의 간격을 80px로 설정 */
+  gap: 60px; /* 버튼 간의 간격을 80px로 설정 */
   margin-bottom: 15px; /* 컨테이너 아래쪽에 15px 여백 추가 */
 }
 
 .expense-btn {
-  padding: 10px 20px; /* 버튼 내부 여백을 상하 10px, 좌우 20px로 설정 */
+  top: 50px;
+  width: 150px; /* 버튼의 너비를 늘림 */
+  text-align: center; /* 텍스트 중앙 정렬 */
+  padding: 10px 3px; /* 버튼 내부 여백을 상하 10px, 좌우 20px로 설정 */
   border: 1px solid #ccc; /* 버튼 테두리를 연한 회색으로 설정 */
   border-radius: 5px; /* 버튼 모서리를 5px 둥글게 설정 */
   background-color: #f9f9f9; /* 버튼 배경색을 연한 회색으로 설정 */
@@ -22,10 +25,11 @@
 
 .expense-btn.active {
   border-color: #ff5b5b; /* 활성화된 버튼의 테두리 색상을 빨간색으로 변경 */
-  background-color: #ffecec; /* 활성화된 버튼의 배경색을 연한 빨간색으로 변경 */
-  color: #ff5b5b; /* 활성화된 버튼의 텍스트 색상을 빨간색으로 변경 */
+  background-color: #ff6347; /* 활성화된 버튼의 배경색을 연한 빨간색으로 변경 */
+  color: white; /* 활성화된 버튼의 텍스트 색상을 빨간색으로 변경 */
 }
 
 .expense-btn:hover {
-  background-color: #f0f0f0; /* 마우스를 올렸을 때 버튼 배경색을 약간 어두운 회색으로 변경 */
+  background-color: #febe98; /* 마우스를 올렸을 때 버튼 배경색을 약간 어두운 회색으로 변경 */
+  color: #ff6347;
 }
