--- a/src/styles/cashbook/HeaderCashbook.css
+++ b/src/styles/cashbook/HeaderCashbook.css
@@ -3,7 +3,7 @@
   flex-direction: column; /* 세로 방향(column)으로 정렬 */
   background-color: #f8e1e1; /* 배경 색상을 연한 분홍색으로 설정 */
   padding: 10px; /* 내부 여백을 10px로 설정 */
-  font-size: 10px; /* 글자 크기를 20px로 설정 */
+  font-size: 20px; /* 글자 크기를 20px로 설정 */
   margin-top: 0px; /* 상단 여백을 5px로 추가 */
   margin-bottom: 0px; /* 기존 5px에서 0px으로 수정 */
 }
@@ -20,13 +20,14 @@ body {
   gap: 0px; /* 자식 요소 간격을 5px로 설정 */
   margin-top: 0px; /* 상단 여백 5px 추가 */
   margin-bottom: 5px; /* 하단 여백 5px 추가 */
+  background-color: transparent; /* 상단바 배경을 투명으로 설정 */
 }
-
 .cashbook-nav-btn {
-  background: none; /* 버튼의 배경 제거 */
-  border: none; /* 버튼의 테두리 제거 */
-  color: black; /* 버튼 텍스트 색상을 검정색으로 설정 */
-  font-size: 15px; /* 버튼 텍스트 크기를 20px로 설정 */
+  background: #f8e1e1 !important; /* 상단바 색상 배경 설정 */
+  border: none !important; /* 버튼 테두리 설정 */
+  color: black;
+  font-size: 15px;
+  padding: 5px 10px; /* 버튼 크기 및 패딩 조정 */
 }
 
 .cashbook-cashbook-title-section {
@@ -76,7 +77,7 @@ body {
 
 .cashbook-modal-content {
   background-color: white; /* 모달 내부 배경을 흰색으로 설정 */
-  padding: 0px; /* 내부 여백 10px 설정 */
+  padding: 20px; /* 내부 여백 10px 설정 */
   border-radius: 15px; /* 모서리를 10px 둥글게 설정 */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
   text-align: center; /* 텍스트 중앙 정렬 */
@@ -87,6 +88,7 @@ body {
   gap: 5px; /* 버튼 간격 조정 */
   justify-content: center; /* 수평 정렬 */
   align-items: center; /* 수직 정렬 */
+  max-width: 120%; /* 최대 너비 제한 */
 }
 
 .cashbook-modal-content button {
