--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -297,9 +297,9 @@
 
 
 .topic-section {
-  border: 2px solid #febe98;
-  border-radius: 8px;
-  padding: 15px;
+  border: 2px solid #febe98 !important;
+  border-radius: 8px !important;
+  padding: 15px !important;
   text-align: center;
   transition: background-color 0.3s;
   pointer-events: auto;
