--- a/src/styles/cashbook/SlideDrawer.css
+++ b/src/styles/cashbook/SlideDrawer.css
@@ -72,9 +72,9 @@
   z-index: 9999;
 }
 
-/* 모바일 화면에서 플로팅 버튼 보이도록 설정 */
+/* 모바일 화면에서 플로팅 버튼 보이도록 설정 
 @media (max-width: 768px) {
   .floating-action-button {
     left: 50px; /* 화면 왼쪽에 가까운 위치로 변경 */
-  }
-}
+/*}*/
+/*}*/
