--- a/src/styles/cashbook/GetBudgetSettings.css
+++ b/src/styles/cashbook/GetBudgetSettings.css
@@ -15,7 +15,7 @@
   gap: 15px;
 }
 
-.cashbook-budget-item {
+.cashbook-budgetsetting-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -24,6 +24,7 @@
   padding: 10px 15px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  gap: 5px;
 }
 
 .cashbook-budget-category {
@@ -39,6 +40,7 @@
   border: 1px solid #ddd;
   border-radius: 4px;
   text-align: right;
+  margin-right: 10px; /* 금액 입력 필드와 다음 요소 간격 */
 }
 
 .cashbook-budget-edit .edit-icon {
@@ -46,6 +48,7 @@
   border: none;
   cursor: pointer;
   font-size: 16px;
+  margin-right: 10px; /* 아이콘과 체크박스 간격 */
 }
 
 .cashbook-budget-toggle .switch {
@@ -53,6 +56,7 @@
   display: inline-block;
   width: 40px;
   height: 20px;
+  margin-left: 5px; /* 체크박스 여백 조정 */
 }
 
 .cashbook-budget-toggle .switch input {
