--- a/src/styles/cashbook/GetBudgets.css
+++ b/src/styles/cashbook/GetBudgets.css
@@ -15,7 +15,7 @@
 }
 
 .cashbook-reset-button,
-.scashbook-ettings-button {
+.cashbook-ettings-button {
   padding: 8px 16px;
   border: none;
   border-radius: 4px;
@@ -58,7 +58,9 @@
 
 .cashbook-budget-item {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between; /* 각 항목을 좌우로 균등 분포 */
+  align-items: center; /* 세로 중앙 정렬 */
+
   background-color: #fff;
   padding: 10px 15px;
   border-radius: 8px;
@@ -72,5 +74,11 @@
 }
 
 .cashbook-budget-details {
+  display: flex;
+  gap: 20px; /* 각 항목 사이의 간격 설정 */
   font-size: 14px;
+  color: #333;
+}
+.cashbook-budget-details > div {
+  text-align: center;
 }
