--- a/src/styles/cashbook/GetCategoryExpenseStats.css
+++ b/src/styles/cashbook/GetCategoryExpenseStats.css
@@ -1,49 +1,65 @@
-.category-expense-stats {
-  max-width: 800px;
-  margin: 0 auto;
-  text-align: center;
-  padding: 20px;
+.category-expense-stats h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
-.pie-chart-container {
-  margin: 20px 0;
-}
-
-.pie-chart-container h3 {
-  margin-top: 10px;
-  color: #ff6384;
+.category-expense-stats h4 {
   font-size: 1.2rem;
-  width: 70%; /* 너비 조정 */
-  max-width: 500px; /* 최대 크기 제한 */
-  margin: 0 auto; /* 중앙 정렬 */
+  font-weight: normal;
+  color: #333;
 }
 
-.cashbook-table-container {
-  margin-top: 20px;
+.progress-row {
+  font-size: 1rem;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
+.progress-bar-0 .progress-bar {
+  background-color: #ff6384 !important; /* 간식: 빨간색 */
 }
 
-th,
-td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: center;
+.progress-bar-1 .progress-bar {
+  background-color: #36a2eb !important; /* 병원비: 파란색 */
 }
 
-th {
-  background-color: #f4f4f4;
+.progress-bar-2 .progress-bar {
+  background-color: #ffce56 !important; /* 미용비: 노란색 */
+}
+
+.progress-bar-3 .progress-bar {
+  background-color: #4bc0c0 !important; /* 장난감: 청록색 */
+}
+
+.progress-bar-4 .progress-bar {
+  background-color: #9966ff !important; /* 의류: 보라색 */
+}
+
+.progress-bar-5 .progress-bar {
+  background-color: #f4e9e9 !important; /* 사료: 주황색 */
+}
+.progress-bar-6 .progress-bar {
+  background-color: #3bb408 !important; /* 산책용품: 주황색 */
+}
+.progress-bar-7 .progress-bar {
+  background-color: #4d08b4 !important; /* 미용용품: 주황색 */
+}
+.progress-bar-8 .progress-bar {
+  background-color: #9208b4 !important; /* 위생용품: 주황색 */
+}
+.progress-bar-9 .progress-bar {
+  background-color: #ff9f40 !important; /* 기타: 주황색 */
+}
+
+.text-start {
   font-weight: bold;
 }
 
-tr:nth-child(even) {
-  background-color: #f9f9f9;
+.text-end {
+  font-weight: bold;
 }
 
-tr:hover {
-  background-color: #f1f1f1;
+.progress {
+  background-color: #f3f3f3;
+  border-radius: 20px;
+  height: 25px;
 }
