--- a/src/styles/community/quill.snow.css
+++ b/src/styles/community/quill.snow.css
@@ -1,9 +1,9 @@
 .ql-size-small {
   font-size: 12px;
 }
-.ql-size-medium {
+/* .ql-size-medium {
   font-size: 16px;
-}
+} */
 .ql-size-large {
   font-size: 24px;
 }
