--- a/src/styles/pointshop/GetGifticon.css
+++ b/src/styles/pointshop/GetGifticon.css
@@ -46,7 +46,7 @@
   color: #333;
 }
 
-.use-gifticon-button {
+.point-use-gifticon-button {
   width: 90%;
   background-color: #FF6347;
   color: #fff;
@@ -56,7 +56,6 @@
   font-weight: bold;
   cursor: pointer;
   margin: 20px 0;
-  border-radius: 10px;
   transition: all 0.3s ease;
 }
 
